# indabax-2025

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
admin/: README.md  fetch_data.py  leaderboard.py  push_data.py
admin/notebooks/: evaluate.ipynb
makefiles/: base.mk  help.mk  py-env.mk  py-pip-tools.mk
recommender_systems/: evaluator_module.py  features.py  pull_data.py  splits.py  trainer_module.py  transform_module.py
recommender_systems/notebooks/: ratings_aggregation.ipynb  tfx_pipeline.ipynb
tfx_tfrs/: __init__.py  fn_args_utils.py  trainer.py
